        When doing so, DO NOT INCLUDE version.json from root, as it will update the build ID of it
    - develop a PyCharm plugin for FactoryBuilder type hints, and mod dev stuff


changelog of snapshot <21w23a> released on <?> targeting <21w20a>
    Networking:
        - further work on the network system


changelog of snapshot 21w20a released on 19.5.2021 targeting 21w19a
    This snapshot again breaks backwards compatibility.
    We have refactored again some stuff

    Test Framework:
        - tweaked some stuff

    Commands:
        - added /chunk delete all command
        - added /chunk dumpdatadebug [all] command

    World generation:
        - added debug helper code for dumping the map structure in image format

    Modding:
        - removed the API management system
        - added extension point for other mod loaders

    Entity Rendering:
        - some small improvements

    Toolchain:
        - imports can now be also sorted, using the isort module

    Inventories:
        - implemented creative player inventory with creative tabs [data-driven, but extension point via events]

    Networking:
        - some smaller work on network handlers


changelog of snapshot 21w17a released on 28.04.2021 targeting 21w17a
    This snapshot breaks again compatibility, mainly the following:
        - reworked how the world generates
        - reworked how the world stores data maps of chunks (e.g. heightmaps)
        - broke with this world loading compatibility, did not add a DataFixer for it, so old worlds cannot be
            loaded
        - rewritten command system from ground
        - refactored some important bits. This breaks block construction & rendering

    Commands:
        - rewritten how commands work internally
        - a lot of migrations
        - added /worldgendebug command
        - moved some commands around, removed some, added some new nodes to some

    World Generation:
        - added async world generation process